<resources>
    <string name="app_name">EcoWater</string>
    <string name="app_logo_title">EcoWater</string>
    <string name="app_logo_subtitle">Making your plants happier!</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sensors">Sensores</string>
    <string name="arduino_interaction">Arduino</string>
    <string name="sensors_instructions">Tape el sensor de luz para prender el flash de su dispositivo</string>
    <string name="light_sensor_value">Valor del sensor de luz</string>
    <string name="flash_state">Estado del flash</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="light_sensor_tooltip">El flash también se puede encender por falta de luz en el ambiente</string>
    <string name="bt_status">Estado del bluetooth</string>
    <string name="bt_actions">Acciones bluetooth</string>
    <string name="enable_bt">Activar bluetooth</string>
    <string name="disable_bt">Desactivar bluetooth</string>
    <string name="search_devices">Buscar dispositivos</string>
    <string name="paired_devices">Dispositivos emparejados</string>
    <string name="bt_enabled">Bluetooth activado</string>
    <string name="bt_disabled">Bluetooth desactivado</string>
    <string name="bt_not_available_on_device">Bluetooth no disponible en este dispositivo</string>
    <string name="device_found">Dispositivo encontrado: </string>
    <string name="bt_device_search_init">Buscando dispositivos</string>
    <string name="bt_device_search_end">Búsqueda de dispositivos finalizada</string>
    <string name="turning_bt_off">Apagando bluetooth</string>
    <string name="turning_bt_on">Encendiendo bluetooth</string>
    <string name="oops">Oops!</string>
    <string name="flash_not_available_on_device">Flash no disponible en este dispositivo...</string>
    <string name="flash_on">Flash ON</string>
    <string name="flash_off">Flash OFF</string>
    <string name="available_bt_devices">Dispositivos encontrados</string>
    <string name="pair">Emparejar</string>
    <string name="unpair">Desemparejar</string>
    <string name="pairing">Emparejando dispositivo</string>
    <string name="bt">Bluetooth</string>
    <string name="bt_devices">Dispositivos bluetooth</string>
    <string name="bonded">Emparejado</string>
    <string name="not_bonded">No emparejado</string>
    <string name="day_moment">Estado del día</string>
    <string name="day">Día</string>
    <string name="night">Noche</string>
    <string name="tank_status">Estado del tanque</string>
    <string name="with_water">Con agua</string>
    <string name="no_water">Sin agua</string>
    <string name="drain_tank">Drenar tanque</string>
    <string name="arduino_actions">Acciones Arduino</string>
    <string name="get_water_level">Obtener nivel tanque</string>
    <string name="get_day_status">Obtener estado del dia</string>
</resources>
