<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_wave"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bluetoothBtn"
        android:layout_width="308dp"
        android:layout_height="68dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primaryDarker"
        android:text="@string/bluetooth"
        app:layout_constraintBottom_toTopOf="@+id/arduinoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameLogo" />

    <Button
        android:id="@+id/arduinoBtn"
        android:layout_width="308dp"
        android:layout_height="68dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primaryDarker"
        android:text="@string/arduino_interaction"
        app:layout_constraintBottom_toTopOf="@+id/sensorsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sensorsBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetoothBtn" />

    <Button
        android:id="@+id/sensorsBtn"
        android:layout_width="308dp"
        android:layout_height="68dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/primaryDarker"
        android:text="@string/sensors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arduinoBtn" />

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="277dp"
        android:layout_height="95dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="63dp"
        app:layout_constraintBottom_toTopOf="@+id/appNameLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/applogo" />

    <TextView
        android:id="@+id/appNameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="124dp"
        android:text="@string/app_logo_title"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/bluetoothBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo" />

    <TextView
        android:id="@+id/logoSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_logo_subtitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bluetoothBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameLogo"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>