<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothActivity">

    <TextView
        android:id="@+id/btOnText"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="12dp"
        android:background="@color/semanticSuccess"
        android:capitalize="none"
        android:gravity="center"
        android:text="@string/on"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btOffText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStatusText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/btOffText"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginBottom="33dp"
        android:background="@color/semanticError"
        android:gravity="center"
        android:text="@string/off"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btActionsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btOnText" />

    <TextView
        android:id="@+id/btStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="114dp"
        android:text="@string/bt_status"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btOnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/btActionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="4dp"
        android:text="@string/bt_actions"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/toggleBtBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btOffText" />

    <Button
        android:id="@+id/searchDevicesBtn"
        android:layout_width="324dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/primaryDarker"
        android:text="@string/search_devices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleBtBtn"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/toggleBtBtn"
        android:layout_width="324dp"
        android:layout_height="70dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/primaryDarker"
        android:text="@string/enable_bt"
        app:layout_constraintBottom_toTopOf="@+id/searchDevicesBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btActionsText"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:indeterminate="true"
        android:indeterminateTint="@color/primaryDarker"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="219dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintBottom_toTopOf="@+id/btStatusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@drawable/bt" />

</androidx.constraintlayout.widget.ConstraintLayout>